--- a/pages/index/index.css
+++ b/pages/index/index.css
@@ -17,7 +17,7 @@ body {
 
 .cards {
     width : 40%;
-    height : 50%;
+    height : auto;
     min-height : 20rem;
     min-width : 25rem;
 
@@ -32,4 +32,24 @@ body {
     height: 5rem;
     background-color: cornflowerblue;
     margin : 1rem;
+    cursor: pointer;
+}
+
+.info {
+    width : 40%;
+    margin : 2rem;
+    min-width : 25rem;
+
+    display : flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.buttons {
+    width : 40%;
+    padding : 3rem;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
