--- a/pages/index/index.css
+++ b/pages/index/index.css
@@ -9,12 +9,14 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat';
+    overflow-x: hidden;
 }
 
 .wrapper {
     width : 100vw;
-    height : 100vh;
-    overflow: hidden;
+    min-height: 100vh;
+    height : auto;
+    overflow-x: hidden;
 
     display: flex;
     flex-direction: column;
